--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <img class="rounded-img" src="img.jpg" alt="Andriy" />
+          <img class="rounded-img" src="title.jpg" alt="Andriy" />
           <h1 class="fw-light">Cycling Shop</h1>
           <p class="lead text muted">Welcome to our store</p>
           <a
