--- a/bicycles.html
+++ b/bicycles.html
@@ -75,7 +75,7 @@
     <div class="row row-cols-1 row-cols-md2 row-cols-lg-4 g-4">
       <div class="col">
         <div class="card">
-          <img src="sworks.JPG" class="card-img-top" alt="My image" />
+          <img src="sworks.jpg" class="card-img-top" alt="My image" />
           <div class="card-body">
             <h5 class="card-title">S-Works</h5>
             <p class="card-text">
