--- a/bicycles.html
+++ b/bicycles.html
@@ -105,7 +105,7 @@
           Велосипед вживаний але в дуже доброму стані, вага 7,3 кг
 
         </p>
-        <a href="trek.jpg" target="_blank" class="btn btn-primary">Buy</a>
+        <a href="tel:+380630606495" target="_blank" class="btn btn-primary">Buy</a>
       </div>
     </div>
   </div>
