--- a/bicycles.html
+++ b/bicycles.html
@@ -83,7 +83,7 @@
               53/39 Касета Dura Ace 9000 11-28 Колеса Roval Rapide CLX 40 Трубки
               Continental Gatorskin 700x25 Вага 6,77
             </p>
-            <a href="sworks.jpg" target="_blank" class="btn btn-primary">Buy</a>
+            <a href="tel:+380630606495" target="_blank" class="btn btn-primary">Buy</a>
           </div>
         </div>
       </div>
@@ -124,7 +124,7 @@
                 Покришки Vittoria Rubino Graphene 2.0 25C.
                 Велосипед в доброму стані z
               </p>
-              <a href="fondriest.jpg" target="_blank" class="btn btn-primary">Buy</a>
+              <a href="tel:+380630606495" target="_blank" class="btn btn-primary">Buy</a>
             </div>
           </div>
         </div>
@@ -143,7 +143,7 @@
              Ручки, система  ма , перемикачі сидіння, винос 
              кермо , обмотка все нове
           </p>
-          <a href="orbea.jpg" target="_blank" class="btn btn-primary">Buy</a>
+          <a href="tel:+380630606495" target="_blank" class="btn btn-primary">Buy</a>
         </div>
       </div>
     </div>
